--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>OMLOOK your best desigion</title>
+    <title>OMLOOK</title>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="">
     <meta name="description" content="">
+    <link rel="shortcut icon" href="images/logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -21,12 +22,10 @@
 <section id="home" class="parallax-section">
     <div class="container">
         <div class="row">
-            <div class="col-md-12 col-sm-12">
-                <div class="col-md-12 col-sm-12">
-                    <h1>OMLOOK</h1>
-                    <a href="https://omlook.com/test/navigate/auto" class="btn btn-danger wow fadeInUp" data-wow-delay="0.4s">Купить</a>
-                    <a href="#about" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="0.6s">О нас</a>
-                </div>
+            <div class="col-md-12 col-sm-12 text-center">
+                <h1 class="gradient-all">OMLOOK</h1>
+                <a href="https://omlook.com/test/navigate/auto" class="btn btn-danger wow fadeInUp" data-wow-delay="0.6s">Купить</a>
+                <a href="#about" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="0.8s">О нас</a>
             </div>
         </div>
     </div>
@@ -66,55 +65,58 @@
 <section id="blog" class="parallax-section">
     <div class="container">
         <div class="row">
-            <h2>OUR BLOG</h2>
-            <h4>Simple and Powerful tips</h4>
-            <div class="blog-masonry masonry-true">
-                <div class="post-masonry col-md-4 col-sm-6 wow fadeInUp">
-                    <div class="blog-wrapper">
-                        <img src="images/blog-img-1.jpg" class="img-responsive" alt="blog img">
-                        <h3><a href="#">CITY PLANNING STEPS</a></h3>
-                        <small>August 26, 2016</small>
-                        <p>Lorem ipsum dolor sit amet, maecenas eget vestibulum justo imperdiet, wisi risus purus augue vulputate voluptate neque, curabitur dolor libero sodales.</p>
+            <h2>Наши машины</h2>
+        </div>
+        <div class="row blog-masonry masonry-true">
+            <div class="post-masonry col-md-6 col-sm-16 wow fadeInUp" data-wow-delay="0.4s">
+                <div class="blog-wrapper">
+                    <img src="images/image.png" class="img-responsive" alt="blog img">
+                    <div class="blog-inner">
+                        <h3>Nissan Pathfinder (Zhizun Edition)</h3>
+                        <p> Эксклюзивная версия Nissan Pathfinder для китайского рынка.<br>
+                            Год выпуска: 2023 <br>
+                            Стоимость: 4 850 000 Руб
+                        </p>
+                        <a href="https://omlook.com/test/navigate/auto" class="btn-buy">Купить</a>
                     </div>
                 </div>
-                <div class="post-masonry col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.2s">
-                    <div class="blog-wrapper">
-                        <img src="images/blog-img-2.jpg" class="img-responsive" alt="blog img">
-                        <h3><a href="#">HOW TO DEVELOP A TOWN</a></h3>
-                        <small>August 22, 2016</small>
-                        <p>Lorem ipsum dolor sit amet, maecenas eget vestibulum justo imperdiet, wisi risus purus augue vulputate voluptate neque.</p>
+            </div>
+            <div class="post-masonry col-md-6 col-sm-16 wow fadeInUp" data-wow-delay="0.8s">
+                <div class="blog-wrapper">
+                    <img src="images/business.jpg" class="img-responsive" alt="blog img">
+                    <div class="blog-inner">
+                        <h3>FORD TRANSIT</h3>
+                        <p> Микроавтобус бизнес класса<br>
+                            Год выпуска: 2024 <br>
+                            Стоимость: 7 000 000 Руб
+                        </p>
+                        <a href="https://omlook.com/test/navigate/auto" class="btn-buy">Купить</a>
                     </div>
                 </div>
-                <div class="post-masonry col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.4s">
-                    <div class="blog-wrapper">
-                        <img src="images/blog-img-3.jpg" class="img-responsive" alt="blog img">
-                        <h3><a href="#">DESIGNING A BUILDING</a></h3>
-                        <small>August 14, 2016</small>
-                        <p>Lorem ipsum dolor sit amet, maecenas eget vestibulum justo imperdiet, wisi risus purus augue vulputate voluptate neque, curabitur dolor libero sodales.</p>
+            </div>
+            <div class="post-masonry col-md-6 col-sm-16 wow fadeInUp" data-wow-delay="0.4s">
+                <div class="blog-wrapper">
+                    <img src="images/car3.jpg" class="img-responsive" alt="blog img">
+                    <div class="blog-inner">
+                        <h3>Toyota Land Cruiser</h3>
+                        <p>
+                            Год выпуска: 2023 <br>
+                            Стоимость: 3 950 000 Руб
+                        </p>
+                        <a href="https://omlook.com/test/navigate/auto" class="btn-buy">Купить</a>
                     </div>
                 </div>
-                <div class="post-masonry col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
-                    <div class="blog-wrapper">
-                        <img src="images/blog-img-4.jpg" class="img-responsive" alt="blog img">
-                        <h3><a href="#">ARCHITECTURE CONCEPTS</a></h3>
-                        <small>July 23, 2016</small>
-                        <p>Lorem ipsum dolor sit amet, maecenas eget vestibulum justo imperdiet, wisi risus purus augue vulputate voluptate neque, curabitur dolor libero sodales vitae elit massa.</p>
-                    </div>
-                </div>
-                <div class="post-masonry col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.8s">
-                    <div class="blog-wrapper">
-                        <img src="images/blog-img-5.jpg" class="img-responsive" alt="blog img">
-                        <h3><a href="#">URBAN DEVELOPMENT</a></h3>
-                        <small>July 19, 2016</small>
-                        <p>Lorem ipsum dolor sit amet, maecenas eget vestibulum justo imperdiet, wisi risus purus augue vulputate voluptate neque.</p>
-                    </div>
-                </div>
-                <div class="post-masonry col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="1.0s">
-                    <div class="blog-wrapper">
-                        <img src="images/blog-img-6.jpg" class="img-responsive" alt="blog img">
-                        <h3><a href="#">BECOME A DEVELOPER</a></h3>
-                        <small>July 12, 2016</small>
-                        <p>Lorem ipsum dolor sit amet, maecenas eget vestibulum justo imperdiet, wisi risus purus augue vulputate 	voluptate neque, curabitur dolor libero sodales vitae elit massa.</p>
+            </div>
+            <div class="post-masonry col-md-6 col-sm-16 wow fadeInUp" data-wow-delay="0.8s">
+                <div class="blog-wrapper">
+                    <img src="images/car3.jpg" class="img-responsive" alt="blog img">
+                    <div class="blog-inner">
+                        <h3>Toyota Land</h3>
+                        <p>
+                            Год выпуска: 2023 <br>
+                            Стоимость: 3 950 000 Руб
+                        </p>
+                        <a href="https://omlook.com/test/navigate/auto" class="btn-buy">Купить</a>
                     </div>
                 </div>
             </div>
@@ -146,12 +148,12 @@
                     <h2>CONTACT US</h2>
                     <div>
                         <h4>OMLOOK</h4>
-                        <p>Москва, Пекин, Варшавское шоссе</p>
+                        <p>Москва, Варшавское шоссе 47</p>
                     </div>
                     <div>
                         <h4>Отправьте нам письмо</h4>
                         <p>Email: hello@company.com</p>
-                        <p>Tel: 010-020-0770 &nbsp;&nbsp;&nbsp; Fax: 090-080-0430</p>
+                        <p>Tel: 010-020-0770 </p>
                     </div>
                 </div>
             </div>
@@ -164,20 +166,15 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
-                <h2>Modern Town</h2>
-                <p>Lorem ipsum dolor sit amet, maecenas eget vestibulum justo imperdiet, wisi risus purus augue vulputate voluptate neque, curabitur dolor libero sodales vitae elit massa.</p>
-                <p>Copyright &copy; 2016 Modern Town 
-                | Design: <a rel="nofollow" href="http://www.tooplate.com" target="_parent">Tooplate</a></p>
+                <h2>OMLOOK</h2>
+                <p>Omlook - это универсальная площадка, предлагающая широкий спектр услуг и возможностей. Отличительная черта Omlook - это его приемлемые цены и высокий кешбек. Тем самым, это делает его привлекательной точкой для пользователей различных потребностей.</p>
             </div>
             <div class="link-list col-md-2 col-sm-2 wow fadeInUp" data-wow-delay="0.6s">
-                <h2>Company</h2>
-                <a href="#">About</a>
-                <a href="#">Blog</a>
-                <a href="#">Team</a>
-                <a href="#">Career</a>
+                <h2>Компания</h2>
+                <a href="#">About Us</a>
             </div>
             <div class="link-list col-md-2 col-sm-2 wow fadeInUp" data-wow-delay="0.6s">
-                <h2>Support</h2>
+                <h2>Поддержка</h2>
                 <a href="#">Email Us</a>
             </div>
         </div>
